
	mbfbgen:
		Obsolete and removed from the distribution. The function is
		now in mbfile.

	fbutil:
		Removed from the distribution. Thanks to Johannes Lundberg,
		2:206/149@fidonet to let us use his program until mbfile could
		take over.



v0.33.20        10-Feb-2002

	upgrade:
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.

	general:
		Added structures for area maintenance with area lists.
		Installing the maptabs don't give any errors anymore when
		installed as user mbse. The location of the source isn't
		important anymore to install the maptabs.
		Updated German, Spanish and Galego languages.
		The location of the sourcefiles is not important anymore.
		Added detection of vpopmail in default installation path.
		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.

	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.
		Fixed lharc archives return code to LHA.

	clcomm.a
		Added counter for mailer TCP/IP sessions.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done. The JAM base is also removed when deleting.
		Layout for message area editor changed, more logical now.
		If selecting a file/mailgroup in node edit that is outside the
		visible range of groups, the view is adjusted.
		If changing the path in an existing file area, the files in
		that area are moved to the new path.
		It is now possible to move file areas.
		It is now possible to move JAM message bases.
		Added edit of external message editor in menu 1.4.
		Added edit of NoPrompt setting in menus for doors.
		Changed edit of message editor in user editor.
		Double noderecords are automatic removed with error logging.