@@ -4587,6 +4587,8 @@ v0.33.20        10-Feb-2002
 	upgrade:
 		Compile sources and install binaries. Restart the BBS.
 		Enter mbsetup, this will upgrade the databases.
+		Go into global configuration, exit and save, this will update
+		the main configuration (add default macro path).
 
 	general:
 		Added structures for area maintenance with area lists.
@@ -4597,6 +4599,9 @@ v0.33.20        10-Feb-2002
 		The location of the sourcefiles is not important anymore.
 		Added detection of vpopmail in default installation path.
 		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.
+		Added the turbodiesel macro language so that reports can be
+		customized per language and reports. Thanks to Redy Rodriguez
+		for finding this one and implement it into mbse bbs.
 
 	common.a:
 		Added 2 functions to return the OS name and CPU family.
